Thu Dec 17 22:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): remove code for ifunc
	  because it was made unnecessary by r52138.

Thu Dec 17 16:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* proc.c (rb_block_arity): should not call GetProcPtr() for symbols.
	  [ruby-core:72205] [Bug #11830]

Thu Dec 17 14:16:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scrub): the result should be infected by the
	  original string.

Thu Dec 17 13:35:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (rb_econv_substr_append, econv_primitive_convert):
	  the result should be infected by the original string.

Thu Dec 17 09:46:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (reg_names_iter): should consider encoding of regexp.
	  [ruby-core:72185] [Bug #11825]

Thu Dec 17 03:52:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_make_env_each): should not compare with Qfalse and FALSE.
	  Pointed at http://d.hatena.ne.jp/nagachika/20151216/ruby_trunk_changes_53128_53163

Thu Dec 17 03:15:25 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method_each_type): should not set fastpath
	  with keyword arguments for VM_METHOD_TYPE_ATTRSET type methods.

	  Normally, we can not use keyword arguments for this kind of methods,
	  (obj.foo = 1), but we can set alias names for them.
	  [Bug #11657]

	* test/ruby/test_keyword.rb: add a test for this fix.

Wed Dec 16 20:32:43 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/fiddle/handle.c: check tainted string arguments.
	  Patch provided by tenderlove and nobu.

	* test/fiddle/test_handle.rb (class TestHandle): add test for above.


Wed Dec 16 19:30:56 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm.c (vm_make_proc_from_block): should convert a Symbol to a Proc.
	  [ruby-core:72083] [Bug #11811]

Wed Dec 16 16:17:34 2015  Eric Wong  <e@80x24.org>

	* test/ruby/test_io.rb: fix spelling errors
